--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "repository": {
     "type": "git",
     "url": "http://github.com/JLouback/xtuple-jscommunicator"
+  },
+  "engines": {
+    "node": "0.8.x"
   }
 }
